[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Background/Esileht/Nupp_edasi_all.png" type="Texture" id=1]
[ext_resource path="res://assets/Background/Esileht/Nupp_katkesta.png" type="Texture" id=2]
[ext_resource path="res://assets/Tulemused_nupp.png" type="Texture" id=3]
[ext_resource path="res://src/Tase_läbitud.gd" type="Script" id=4]
[ext_resource path="res://assets/helid/levelil2bimine.wav" type="AudioStream" id=5]
[ext_resource path="res://moonhouse_web.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/Finish_mängus.png" type="Texture" id=7]

[node name="Tase_läbitud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -48.0
margin_right = 40.0
margin_bottom = 8.0
mouse_default_cursor_shape = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="taust_FINAL (1)" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 40.0
margin_right = -32.0
margin_bottom = -8.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edasi" type="TextureButton" parent="."]
visible = false
margin_left = 1651.94
margin_top = 834.939
margin_right = 1909.94
margin_bottom = 1092.94
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Katkesta" type="TextureButton" parent="."]
visible = false
margin_left = 35.4033
margin_top = 860.75
margin_right = 181.403
margin_bottom = 1068.75
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.498
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.507
margin_left = -287.984
margin_top = -176.0
margin_right = 323.0
margin_bottom = 691.048
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = 32.0
margin_right = 294.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 6 )
text = "punktid"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -120.0
margin_right = 524.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 6 )
text = "Kasutaja"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = -0.125
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPPOSTRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Edasi" to="." method="_on_Edasi_pressed"]
[connection signal="pressed" from="Katkesta" to="." method="_on_Katkesta_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="request_completed" from="HTTPPOSTRequest" to="." method="_on_HTTPRequest_request_completed"]
